# KyPoGen

./: README.md  pyproject.toml
src/kypogen/: crew.py  main.py
src/kypogen/config/: agents.yaml  tasks.yaml
