[project]
name = "kypogen"
version = "0.1.0"
description = "KyPoGen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
kypogen = "kypogen.main:run"
run_crew = "kypogen.main:run"
train = "kypogen.main:train"
replay = "kypogen.main:replay"
test = "kypogen.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
